Corrected the color select box alignment

--- a/misc/scratch/data/scratchCSS.css
+++ b/misc/scratch/data/scratchCSS.css
@@ -15,7 +15,6 @@ textarea {
 
 select {
     max-width: 75px;
-    margin-bottom: 5px;
 }
 
 .presentation {
